tests/ui/symbol-names/issue-60925.legacy.stderr
error: symbol-name(_ZN11issue_609253foo37Foo$LT$issue_60925..llv$u6d$..Foo$GT$3foo17h0c5a913a7866cf0eE)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling(issue_60925::foo::Foo<issue_60925::llvm::Foo>::foo::h0c5a913a7866cf0e)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(issue_60925::foo::Foo<issue_60925::llvm::Foo>::foo)
  --> $DIR/issue-60925.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

